[gd_scene load_steps=4 format=3 uid="uid://dppt0dsngt68c"]

[ext_resource type="Script" path="res://src/timer_sprite/timer_sprite.gd" id="1_qj1ax"]
[ext_resource type="Texture2D" uid="uid://c5jgdqrypidpb" path="res://assets/timer_sprite/spectator/frame.png" id="2_86q4r"]
[ext_resource type="Texture2D" uid="uid://c13p17yyh8y3p" path="res://assets/timer_sprite/spectator/digits.png" id="3_jitp2"]

[node name="SpectatorTimerSprite" type="Node2D"]
script = ExtResource("1_qj1ax")

[node name="Frame" type="Sprite2D" parent="."]
texture = ExtResource("2_86q4r")

[node name="MinuteOnes" type="Sprite2D" parent="."]
position = Vector2(-13, 2)
texture = ExtResource("3_jitp2")
hframes = 10

[node name="SecondTens" type="Sprite2D" parent="."]
position = Vector2(0, 2)
texture = ExtResource("3_jitp2")
hframes = 10

[node name="SecondOnes" type="Sprite2D" parent="."]
position = Vector2(13, 2)
texture = ExtResource("3_jitp2")
hframes = 10
